<resources>
    <string name="app_name">FreePark</string>
    <string name="button_addParking">Add Parking</string>
    <string name="hint_parkingLocation">Parking Location</string>
    <string name="hint_parkingDescription">Description </string>
    <string name="menu_addFreepark">Add</string>
    <string name="menu_mapMode">Map mode</string>
    <string name="menu_cancelFreepark">Cancel</string>
    <string name="enter_freepark_location"> Please enter a Freepark Location </string>
    <string name="save_freepark"> Update Freepark </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_freepark_image">Select freepark image</string>
    <string name="change_freepark_image">Change freepark image</string>
    <string name="button_location">See/Change Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_deleteFreepark">Delete</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="click_here">Click Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="title_activity_freepark_maps">Map of all Parking Locations</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login"> Signup/Login to Freepark</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_saveFreepark">Save</string>
</resources>